[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.13"
chrono = {version = "0.4.20", features = ["serde"] }
diesel = {version = "1.4", features = ["mysql", "r2d2", "chrono"]}
pbkdf2 = {version = "0.11.0"}
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "8.1.1"

rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }

rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_mysql_pool"]} 